tdf#91582 initialize charmap when selecting in SvxShowCharSet

Change-Id: I3f73eef349e65a1d2d283d1116729694c1f40ed9